# nuDustC

./: .gitignore  CMakeLists.txt  README.md  paper.md
JOSS Paper/: paper.bib  paper.md
data/: elements.json  sputterDict.json
data/chemistry/: test_chm.chm
data/inputs/: config.ini  test_config.ini
include/: axis.h  cell.h  cellobserver.h  configuration.h  constants.h  destruction.h  elements.h  logging.h  makima.h  network.h  nucleation.h  nudust.h  reaction.h  sput_params.h  sputter.h  timer.h  utilities.h
spack-repo/: repo.yaml
src/: cell.cpp  cell.cpp.orig  cellOBS_hdf5writer.cpp.old  cellobserver.cpp  configuration.cpp  destruction.cpp  goodMain.cpp  main.cpp  network.cpp  nucleation.cpp  nudust.cpp  reaction.cpp
